# dfmblas

./: Cargo.toml  README.md
macro/: Cargo.toml
macro/src/: lib.rs
src/: cwise_ops.rs  lib.rs  main.rs  matrix.rs
